kubernetes/el.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: elastic
  labels:
    service: elasticsearch
spec:
  serviceName: es
  replicas: 2
  # minReadySeconds: 120
  selector:
    matchLabels:
      service: elasticsearch
  template:
    metadata:
      labels:
        service: elasticsearch
    spec:
      terminationGracePeriodSeconds: 300
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.1.1
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: tcp
        volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          service: elasticsearch
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "standard"
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: elastic
  labels:
    app: es
spec:
  ports:
  - port: 9200
    name: tcp
  - port: 9300
    name: inter-node
  selector:
    service: elasticsearch
