kubernetes/webapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: webapp
  labels:
    app: webserver
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: quay.io/myafk/interactive:stable
        command: ["interactive"]
        args: ["ingress"]
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: webapp
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8085
  selector:
    app: webserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: webapp
  labels:
    app: redis-master
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: redis-master
  template:
    metadata:
      labels:
        app: redis-master
    spec:
      containers:
      - name: redis-master
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master-service
  namespace: webapp
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 6379
    targetPort: 6379
  selector:
    app: redis-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
  namespace: webapp
  labels:
    app: redis-slave
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: redis-slave
  template:
    metadata:
      labels:
        app: redis-slave
    spec:
      containers:
      - name: redis-slave
        image: redis
        command: ["/bin/bash"]
        args: ["-c", "redis-server --slaveof $$REDIS_MASTER_HOST 6379"]
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave-service
  namespace: webapp
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 6379
    targetPort: 6379
  selector:
    app: redis-slave
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: webapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /getTaskAnswer
        pathType: Prefix
        backend:
          service:
            name: webserver-service
            port:
              number: 80
